src/components/InputArea.css
.input-area {
	min-height: 100vh;
}

.input-area {
	display: flex;
	flex-direction: column;
	gap: var(--spacing-primary);
	tab-size: 4;
}

.note-input,
.note-preview {
	flex: 1;
	width: 0;
}

.note-input-container,
.note-preview {
	border-radius: 16px;
	color: var(--primary-text-color);
	line-height: 1.5;
}

.note-input-container {
	border: 1px solid var(--border-color);
	field-sizing: content;
}

.note-preview {
	width: 0;
}

.note-preview--skeleton {
	background: var(--code-bg-color);

	@media print {
		background: unset;
	}
}

.note-input {
	@media print {
		display: none;
	}
}

.note-input-container {
	width: 100%;
	height: 100%;
	padding: var(--spacing-primary);
	resize: none;
	font-family: var(--font-family-monospace);
}

.note-input-container::placeholder {
	font-family: var(--font-family-default);
}
.note-preview a {
	color: var(--primary-active-bg-color);
	text-decoration: none;
}

.note-preview a:hover {
	text-decoration: underline;
}

.note-preview-container {
	margin: var(--spacing-primary);

	@media print {
		margin: 16px 0;
	}
}

.note-preview-container > *:first-child {
	margin-top: 0;
}

.note-preview hr,
.note-preview-container > ol,
.note-preview p,
.note-preview pre,
.note-preview table,
.note-preview-container > ul {
	margin: 0 0 16px;
}

.note-preview-container ol,
.note-preview-container ul {
	padding-left: 28px;
}

.note-preview .katex-display {
	margin: 0 0 16px !important; /* Override KaTeX default */
}

.note-preview h1,
.note-preview h2,
.note-preview h3,
.note-preview h4,
.note-preview h5,
.note-preview h6 {
	margin: 24px 0 16px;
	line-height: 1.25;
}

.note-preview hr {
	border-top: 1px solid var(--border-color);
	border-bottom: 0;
	margin: 8px 0;
}

.note-preview h1 {
	font-size: calc(1rem * 28 / 16);
}

.note-preview h2 {
	font-size: calc(1rem * 24 / 16);
}

.note-preview h3 {
	font-size: calc(1rem * 20 / 16);
}

.note-preview h4,
.note-preview h5,
.note-preview h6 {
	font-size: 1rem;
}

.note-preview li {
	margin: 8px 0;
}

.note-preview code {
	background-color: var(--code-bg-color);
	border-radius: 6px;
	font-family: var(--font-family-monospace);
	padding: 1px 6px;
}

.note-preview pre {
	font-size: calc(1rem * 14 / 16);
}

.note-preview-code-block {
	margin: 0 !important;
	border-radius: 8px !important;
}

.note-preview pre:not(:has([class^="language-"])) {
	background-color: var(--code-bg-color);
	border-radius: 8px;
	overflow-x: auto;
	padding: 14px;
}

.note-preview pre code {
	border-radius: 0;
	padding: 0;
}

.note-preview blockquote {
	margin: 1em 0;
	padding-left: 40px;
}

.note-preview table {
	max-width: 100%;
	background-color: var(--code-bg-color);
	color: var(--primary-heading-color);
	border-radius: 8px;
	font-size: calc(1rem * 14 / 16);
}

.note-preview th,
.note-preview td {
	vertical-align: top;
	padding: 8px 12px;
}

.note-preview th {
	background-color: var(--code-bg-color);
	color: var(--primary-heading-color);
	font-weight: unset;
	text-align: unset;
}

.note-preview img {
	max-width: 100%;
}

@media (min-width: 769px) {
	.input-area {
		flex-direction: row;
	}
}

@media (max-width: 768px) {
	.note-input,
	.note-preview {
		width: 100%;
	}

	.note-input,
	.note-input-container,
	.note-preview {
		min-height: 50vh;
	}
}

